--- a/index.html
+++ b/index.html
@@ -48,25 +48,25 @@
             </div>
             <div class="service-box-part">
                 <div class="service-part">
-                    <img src="/img/Cuda Single Page Portfolio.png" alt="icon">
+                    <img src="./img/Cuda Single Page Portfolio.png" alt="icon">
                     <h2>Branding</h2>
                     <p>Lorem ipsum dolor sit amet, 
                     consectetuer adipiscing elit, sed diam nonummy nibh.</p>
                 </div>
                 <div class="service-part">
-                    <img src="/img/pencil.png" alt="icon">
+                    <img src="./img/pencil.png" alt="icon">
                     <h2>Design</h2>
                     <p>Lorem ipsum dolor sit amet, 
                     consectetuer adipiscing elit, sed diam nonummy nibh.</p>
                 </div>
                 <div class="service-part">
-                    <img src="/img/setting.png" alt="icon">
+                    <img src="./img/setting.png" alt="icon">
                     <h2>Development</h2>
                     <p>Lorem ipsum dolor sit amet, 
                     consectetuer adipiscing elit, sed diam nonummy nibh.</p>
                 </div>
                 <div class="service-part">
-                    <img src="/img/roket icon.png" alt="icon">
+                    <img src="./img/roket icon.png" alt="icon">
                     <h2>ROCKET SCIENCE</h2>
                     <p>Lorem ipsum dolor sit amet, 
                     consectetuer adipiscing elit, sed diam nonummy nibh.</p>
